tracklist fixed + garbage code cleaned

--- a/src/app/components/cancion/cancion.component.html
+++ b/src/app/components/cancion/cancion.component.html
@@ -61,8 +61,7 @@
 
         <h2>Add a song</h2>
         <div class="inputs">
-        <input type="text" name="ID" [(ngModel)]="newSong.id" placeholder="ID">
-        <input type="text" name="track" [(ngModel)]="newSong.track" placeholder="Track number">
+        <!-- <input type="text" name="ID" [(ngModel)]="newSong.id" placeholder="ID"> -->
         <input type="text" name="title" [(ngModel)]="newSong.title" placeholder="Title">
         <input type="text" name="composer" [(ngModel)]="newSong.composer" placeholder="Composer">
         <input type="text" name="performer" [(ngModel)]="newSong.performer" placeholder="Performer">
